# fentarxiu

./: .gitignore  README.md  pyproject.toml
src/cli/: __init__.py  main.py  messages_ca.py  work_parser.py
src/drive_connection/: __init__.py  drive.py
src/string_checker/: __init__.py  checker.py
src/string_checker/data/: __init__.py  catalogue.py  catalogue_data.py  folder_parser.py  parser.py
src/string_checker/failures/: __init__.py  base.py
src/string_checker/rules/: __init__.py
src/string_checker/rules/folder_name/: __init__.py  failures.py  rule.py
src/string_checker/rules/folder_valid_chars/: __init__.py  failures.py  rule.py
src/string_checker/rules/instrument_name_match/: __init__.py  failures.py  rule.py
src/string_checker/rules/pdf_extension/: __init__.py  failures.py  rule.py
src/string_checker/rules/prefix/: __init__.py  failures.py  rule.py
src/string_checker/rules/valid_chars/: __init__.py  failures.py  rule.py
src/string_checker/rules/voice/: __init__.py  failures.py  rule.py
tests/: conftest.py  test_catalogue.py  test_checker.py  test_drive.py  test_failures.py  test_folder_parser.py  test_messages_ca.py  test_parser.py
tests/rules/: test_folder_name.py  test_folder_valid_chars.py  test_instrument_name_match.py  test_pdf_extension.py  test_prefix.py  test_valid_chars.py  test_voice.py
