[project]
name = "fentarxiu"
version = "0.1.0"
requires-python = "==3.14.2"
dependencies = [
    "attrs==25.4.0",
    "returns==0.26.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D102", "D104", "PLR2004"]

[tool.ruff.format]

[tool.pytest.ini_options]
pythonpath = ["src"]
